--- a/index.html
+++ b/index.html
@@ -15,41 +15,27 @@
 </head>
 <body id="body" class="relative">
     <header id="header" class="relative">
-        <div id="sliders" class="swiper 1360px:h-screen 940px:h-723px 320px:h-550px relative">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <!-- <img class="w-full h-full object-cover" src="/images/sliders/slider_catolica_1.webp" alt="Slider relacionado a la natación"> -->
-                    <video class="w-full h-full object-cover" src="/videos/video_slider.mp4" autoplay loop></video>
-                    <div class="absolute top-0 left-0 bg-azul_catolica z-20 w-full h-full opacity-50"></div>
-                    <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 font-bree_bold">NATACIÓN</h1>
-                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">¡MATRÍCULAS ABIERTAS!</h2>
-                        <a href="https://wa.me/997470362" target="_blank" class="bg-azul_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</a>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/sliders/slider_natacion_2.webp" alt="Slider relacionado al ballet">
-                    <div class="absolute top-0 left-0 bg-verde_catolica z-20 w-full h-full opacity-50"></div>
-                    <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-bree_bold 1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 ">PISCINA SEMIOLÍMPICA</h1>
-                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">Temperada y techada todo el año</h2>
-                        <a href="https://wa.me/997470362" target="_blank" class="bg-verde_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</a>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <img id="img_tb_mobil" class="w-full h-full object-cover 700:hidden block" src="/images/sliders/mobil_teatro_ballet.webp" alt="Slider relacionado al teatro">
-                    <img id="img_tb_desktop" class="w-full h-full object-cover 700:block hidden" src="/images/sliders/teatro_ballet.webp" alt="Slider relacionado al teatro">
-                    <div class="absolute top-0 left-0 bg-amarillo_catolica z-20 w-full h-full opacity-50"></div>
-                    <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-bree_bold 1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0">TEATRO Y BALLET</h1>
-                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">Haz del escenario tu lugar de expresión</h2>
-                        <a href="https://wa.me/997470362" target="_blank" class="bg-amarillo_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</a>
+        <div class="1360px:h-screen 940px:h-723px 320px:h-550px relative">
+            <video src="/videos/video_slider.mp4" class="w-full h-full object-cover" autoplay loop muted></video>
+            <div class="bg-azul_catolica w-full h-full opacity-50 absolute top-0 left-0"></div>
+            <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center text-center 440px:mt-5 540px:mt-6 1000px:mt-0">
+                <div id="sliders" class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl">¡Bienvenido al <br><span class="text-amarillo_catolica 320px:text-4xl 816px:text-6xl 1260px:text-7xl">"Club La Católica"</span><br><br>Donde tu pasión por nadar crece cada día!</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl 1260px:leading-snug">"¡Nada sin límites! Disfruta de piscinas techadas y temperadas durante todo el año."</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <p class="text-white 320px:font-bree_bold 320px:w-11/12 540px:w-500px 1260px:w-850px 320px:mx-auto 320px:text-3xl 816px:text-5xl 1260px:text-6xl 1260px:leading-snug">"Explora más que natación:<br> Descubre talleres que potencian tu desarrollo integral."</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div id="nav_cabecera" class="fixed top-5 320px:top-0 820px:py-5 320px:py-3 left-0 z-30 w-full flex items-center justify-between px-24 1260px:px-24 820px:px-14 320px:px-4 820px:bg-transparent 320px:bg-white duration-300 320px:shadow-lg"> <!-- 820px:bg-transparent -->
-            <img class="1360px:w-48 820px:w-40 820px:inline-block 320px:hidden" src="/icons/CLC HORIZONTAL.png" alt="Logo de la Acadeémia La Católica">
+            <img class="1360px:w-48 820px:w-40 820px:inline-block 320px:hidden" src="/icons/CLC HORIZONTAL.png" alt="Logo de la Académia La Católica">
             <img class="820px:hidden 320px:inline-block 320px:w-32" src="/icons/CLC HORIZONTAL.png" alt="Icono de la Academia Católica">
             <img id="barra_menu" class="820px:hidden 320px:w-8" src="/icons/menu.png" alt="Icono de la barra del menú">
             <nav class="320px:hidden 820px:inline-block">
@@ -155,7 +141,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
-                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/icons/usuario.webp" alt="Fotografia del docente de Teatro">
+                                <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/profesores/diego_palacios.webp" alt="Fotografia del docente de Teatro">
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Diego Palacios</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
