--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -100,27 +100,135 @@
     <main class="1000px:w-940px 1260px:w-1200px 1000px:mx-auto 1000px:flex 320px:mt-4">
         <section>
             <div class="320px:bg-verde_catolica 320px:text-white 320px:font-bold 320px:p-4 320px:rounded-md 320px:shadow-md animate__animated animate__bounce 320px:w-310px 320px:mx-auto">
-                🎉 Las promociones están disponibles hasta el <span class="underline">21 de diciembre</span>.
+                Las promociones están disponibles hasta el <span class="underline">21 de diciembre</span>.
             </div>              
         </section>
-        <section>
-            <div id="aquabebé" class="320px:border 320px:w-310px 320px:mx-auto">
-                <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none">
-                    <span class="320px:text-lg">Aquabebé</span>
-                    <span class="320px:text-sm font-bree_regular">(9 meses a 4 años)</span>
+        <section class="320px:mt-5 320px:flex 320px:flex-col 320px:gap-4">
+            <div id="aquabebé">
+                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                    <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
+                        <span class="320px:text-lg">Aquabebé</span>
+                        <span class="320px:text-sm font-bree_regular">(9 meses a 4 años)</span>
+                    </div>
+                    <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
+                        <span>Turno</span>
+                        <span>Horario</span>
+                        <span>Costo</span>
+                    </div>
+                    <div class="grid grid-cols-3 grid-rows-custom items-center text-center py-3 font-clanpro_news text-xs">
+                        <span>Lu/Mi/Vi</span>
+                        <span>12 - 12:45 pm</span>
+                        <span class="col-start-3 col-end-4 row-start-1 row-end-5">S/. 350</span>
+                        <span class="row-start-3 row-end-5">Ma/Ju/Sa</span>
+                        <span class="row-start-3 row-end-4">12 - 12:45 pm</span>
+                        <span class="row-start-4 row-end-5">3 - 3:45 pm</span>
+                    </div>
                 </div>
-                <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
-                    <span>Turno</span>
-                    <span>Horario</span>
-                    <span>Costo</span>
+            </div>
+            <div id="menores_1">
+                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                    <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
+                        <span class="320px:text-lg">Menores 1</span>
+                        <span class="320px:text-sm font-bree_regular">(5 a 7 años)</span>
+                    </div>
+                    <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
+                        <span>Turno</span>
+                        <span>Horario</span>
+                        <span>Costo</span>
+                    </div>
+                    <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-clanpro_news text-xs">
+                        <span class="col-start-1 col-end-2 row-start-1 row-end-9">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
+                        <span>8 - 8:45 am</span>
+                        <span class="col-start-3 col-end-4 row-start-1 row-end-9">S/. 300</span>
+                        <span class="">9 - 9:45 am</span>
+                        <span class="">10 - 10:45 am</span>
+                        <span>11 - 11:45 am</span>
+                        <span>12 - 12:45 pm</span>
+                        <span>3 - 3:45 pm</span>
+                        <span>4 - 4:45 pm</span>
+                        <span>5 - 5:45 pm</span>
+                    </div>
                 </div>
-                <div class="grid grid-cols-3 grid-rows-custom items-center text-center py-3 font-clanpro_news text-sm">
-                    <span>Lu/Mi/Vi</span>
-                    <span>12pm</span>
-                    <span class="col-start-3 col-end-4 row-start-1 row-end-5">S/. 350</span>
-                    <span class="row-start-3 row-end-5">Ma/Ju/Sa</span>
-                    <span class="row-start-3 row-end-4">12pm</span>
-                    <span class="row-start-4 row-end-5">3pm</span>
+            </div>
+            <div id="menores_2">
+                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                    <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
+                        <span class="320px:text-lg">Menores 2</span>
+                        <span class="320px:text-sm font-bree_regular">(8 a 14 años)</span>
+                    </div>
+                    <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
+                        <span>Turno</span>
+                        <span>Horario</span>
+                        <span>Costo</span>
+                    </div>
+                    <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-clanpro_news text-xs">
+                        <span class="col-start-1 col-end-2 row-start-1 row-end-9">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
+                        <span>8 - 8:50 am</span>
+                        <span class="col-start-3 col-end-4 row-start-1 row-end-9">S/. 300</span>
+                        <span class="">9 - 9:50 am</span>
+                        <span class="">10 - 10:50 am</span>
+                        <span>11 - 11:50 am</span>
+                        <span>3 - 3:50 pm</span>
+                        <span>4 - 4:50 pm</span>
+                        <span>5 - 5:50 pm</span>
+                        <span>6 - 6:50 pm</span>
+                    </div>
+                </div>
+            </div>
+            <div id="jovenes">
+                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                    <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
+                        <span class="320px:text-lg">Jóvenes y Adultos</span>
+                        <span class="320px:text-sm font-bree_regular">(15 años a más)</span>
+                    </div>
+                    <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
+                        <span>Turno</span>
+                        <span>Horario</span>
+                        <span>Costo</span>
+                    </div>
+                    <div class="grid grid-cols-3 grid-rows-5 items-center text-center py-3 font-clanpro_news text-xs">
+                        <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
+                        <span>6 - 6:50 am</span>
+                        <span class="col-start-3 col-end-4 row-start-1 row-end-6">S/. 230</span>
+                        <span class="">7 - 7:50 am</span>
+                        <span class="">7 - 7:50 pm</span>
+                        <span>8 - 8:50 pm</span>
+                        <span>9 - 9:50 pm</span>
+                    </div>
+                </div>
+            </div>
+            <div id="habilidades">
+                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                    <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
+                        <span class="320px:text-lg">Niños con Habilidades Blandas</span>
+                        <span class="320px:text-sm font-bree_regular">(4 a 7 años)</span>
+                    </div>
+                    <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
+                        <span>Turno</span>
+                        <span>Horario</span>
+                        <span>Costo</span>
+                    </div>
+                    <div class="grid grid-cols-3 grid-rows-1 items-center text-center py-3 font-clanpro_news text-xs">
+                        <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu/Mi/Vi</span><!-- <br>Ma/Ju/Sa -->
+                        <span>2 - 2:45 pm</span>
+                        <span class="col-start-3 col-end-4 row-start-1 row-end-6">S/. 350</span>
+                    </div>
+                </div>
+            </div>
+            <div id="seleccion">
+                <div class="320px:border 320px:rounded-lg 320px:w-310px 320px:mx-auto">
+                    <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
+                        <span class="320px:text-lg">Selección</span>
+                        <span class="320px:text-sm font-bree_regular">Club la Católica</span>
+                    </div>
+                    <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
+                        <span>Turno</span>
+                        <span>Horario</span>
+                    </div>
+                    <div class="grid grid-cols-2 grid-rows-1 items-center text-center py-3 font-clanpro_news text-xs">
+                        <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu - Vi</span>
+                        <span>1 - 3 pm</span>
+                    </div>
                 </div>
             </div>
         </section>
